# make10-solver

./: .gitignore  PRE_PUSH_SETUP.md  README.md  pyproject.toml  pytest.ini  run_system.py  run_training.py
config/: __init__.py  constants.py  settings.py
data/: DATA_STRUCTURE.md
data/dataset/labeled/: README.md
data/dataset/metadata/: dataset_info.json  labeling_log.json  quality_report.json  training_config.json
data/models/exports/: model.keras
docs/: AI_MODEL_REBUILD_GUIDE.md  PRE_PUSH_SETUP.md  PROJECT_REBUILD_GUIDE.md  PYTEST_GUIDE.md  README.md  STEP.md  TECH_SUMMARY.md  ai-model-guide.md  development-guide.md  getting-started.md  installation.md  project-structure.md  quality-assurance.md  system-workflow.md  technical-architecture.md  testing-guide.md  training-workflow.md  troubleshooting.md
src/: __init__.py
src/ai/: __init__.py  grid_detector.py
src/automation/: __init__.py  keyboard_listener.py  screen_utils.py
src/core/: __init__.py  main.py
src/labeling/: __init__.py
tests/: __init__.py  test_config_settings.py  test_grid_detector.py  test_keyboard_listener.py  test_main.py  test_resnet50_predictor.py  test_screen_utils.py
