[project]
name = "make10"
version = "0.1.0"
description = "Make10 遊戲自動化系統 - 基於電腦視覺和機器學習的自動化工具，能夠自動檢測、分析並解決 Make10 數字拼圖遊戲"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lingzi", email = "lingziha@gmail.com" }]
keywords = [
    "game-automation",
    "computer-vision",
    "tensorflow",
    "opencv",
    "ai",
    "machine-learning",
    "puzzle-solver",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "opencv-python==4.12.0.88",
    "numpy==2.1.3",
    "pillow==11.3.0",
    "mss==10.0.0",
    "pynput==1.8.1",
    "tensorflow==2.19.0",
    "pandas==2.3.1",
    "loguru==0.7.3",
    "easydict==1.13",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov",
    "ruff",
    "mypy",
]



[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-cov>=6.2.1",
]
